# GTL_Autonomous_Robotics

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: SP_LCamRate.py  SP_MCamRate.py  talker.py
beginner_tutorials/src/: .talker.cpp.swp
collision_avoidance_base/launch/: ca.launch
collision_avoidance_base/src/: collision_avoidance.cpp
face_detect_base/: CMakeLists.txt  package.xml
face_detect_base/launch/: face_detect.launch
face_detect_base/nodes/: .#rosfacedetect.py  rosfacedetect.py  rosfacedetect.py~
floor_nav/: CMakeLists.txt  package.xml
floor_nav/cfg/: TaskStareAtFace.cfg  TaskWaitForFace.cfg  TaskWander.cfg
floor_nav/include/floor_nav/: SimTasksEnv.h
floor_nav/launch/: launch_vrep.launch
floor_nav/missions/: test_people_finder.py  test_wander.py
floor_nav/msg/: ROIArray.msg
floor_nav/src/: .#SimTasksEnv.cpp  SimTasksEnv.cpp
floor_nav/tasks/: TaskStareAtFace.cpp  TaskWaitForFace.cpp
learning_joy/: CMakeLists.txt  package.xml
learning_joy/launch/: drone_joy.launch  robot_joy.launch
learning_joy/src/: drone_teleop_joy.cpp  robot_teleop_joy.cpp  robot_teleop_joy_collision.cpp
